--- a/index.html
+++ b/index.html
@@ -131,42 +131,60 @@
                     <h2 class="mbot20">Recently Played</h2>
                     <div class="flex-wrap">
                         <div class="col">
-                            <img src="img/metal_lifting.jpg" alt="metal">
+                            <div class="img-container">
+                                <img src="img/metal_lifting.jpg" alt="metal">
+                                <button><i class="fa-regular fa-circle-play"></i></button>
+                            </div>                            
                             <div class="img-text">
                                 <h4><a href="">Heavy Metal</a></h4>
                                 <span><a href="">Subtitle</a></span>
                             </div>
                         </div>
                         <div class="col">
-                            <img src="img/stranger.jpeg" alt="stranger things">
+                            <div class="img-container">
+                                <img src="img/stranger.jpeg" alt="stranger things">
+                                <button><i class="fa-regular fa-circle-play"></i></button>
+                            </div>                            
                             <div class="img-text">
                                 <h4><a href="">Stranger Things, Vol. 1(a Netflix Original Series Soundtrack)</a></h4>
                                 <span><a href="">Subtitle</a></span>
                             </div>
                         </div>
                         <div class="col">
-                            <img src="img/aquietplace.jpeg" alt="a quiet place">
+                            <div class="img-container">
+                                <img src="img/aquietplace.jpeg" alt="a quiet place">
+                                <button><i class="fa-regular fa-circle-play"></i></button>
+                            </div>                            
                             <div class="img-text">
                                 <h4><a href="">A quiet place</a></h4>
                                 <span><a href="">Subtitle</a></span>
                             </div>
                         </div>
                         <div class="col">
-                            <img src="img/split.jpeg" alt="split">
+                            <div class="img-container">
+                                <img src="img/split.jpeg" alt="split">
+                                <button><i class="fa-regular fa-circle-play"></i></button>
+                            </div>                            
                             <div class="img-text">
                                 <h4><a href="">Split</a></h4>
                                 <span><a href="">Subtitle</a></span>
                             </div>
                         </div>
                         <div class="col">
-                            <img src="img/cure.jpeg" alt="a cure for wellness">
+                            <div class="img-container">
+                                <img src="img/cure.jpeg" alt="a cure for wellness">
+                                <button><i class="fa-regular fa-circle-play"></i></button>
+                            </div>                            
                             <div class="img-text">
                                 <h4><a href="">A cure for wellness</a></h4>
                                 <span><a href="">Subtitle</a></span>
                             </div>
                         </div>
                         <div class="col">
-                            <img src="img/sinister.jpeg" alt="sinister">
+                            <div class="img-container">
+                                <img src="img/sinister.jpeg" alt="sinister">
+                                <button><i class="fa-regular fa-circle-play"></i></button>
+                            </div>                            
                             <div class="img-text">
                                 <h4><a href="">Sinister</a></h4>
                                 <span><a href="">Subtitle</a></span>
@@ -181,13 +199,19 @@
                     <span>Più ascolti, PIù MEGLIO saranno i suggerimenti</span>
                     <div class="flex-wrap mtop20">
                         <div class="col">
-                            <img src="img/radar.jpeg" alt="release radar">
+                            <div class="img-container">
+                                <img src="img/radar.jpeg" alt="release radar">
+                                <button><i class="fa-regular fa-circle-play"></i></button>
+                            </div>                            
                             <div class="img-text">
                                 <h4><a href="">Release Radar</a></h4>
                             </div>
                         </div>
                         <div class="col">
-                            <img src="img/mixdaily.jpeg" alt="daily mix">
+                            <div class="img-container">
+                                <img src="img/mixdaily.jpeg" alt="daily mix">
+                                <button><i class="fa-regular fa-circle-play"></i></button>
+                            </div>                            
                             <div class="img-text">
                                 <h4><a href="">Daily Mix 1</a></h4>
                             </div>
@@ -201,13 +225,19 @@
                     <span>Più ascolti, PIù MEGLIO saranno i suggerimenti</span>
                     <div class="flex-wrap mtop20">
                         <div class="col">
-                            <img src="img/youg.jpeg" alt="lana del rey">
+                            <div class="img-container">
+                                <img src="img/youg.jpeg" alt="lana del rey">
+                                <button><i class="fa-regular fa-circle-play"></i></button>
+                            </div>                            
                             <div class="img-text">
                                 <h4><a href="">Schiuppo Spanno</a></h4>
                             </div>
                         </div>
                         <div class="col">
-                            <img src="img/einaudi.jpeg" alt="einaudi">
+                            <div class="img-container">
+                                <img src="img/einaudi.jpeg" alt="einaudi">
+                                <button><i class="fa-regular fa-circle-play"></i></button>
+                            </div>                            
                             <div class="img-text">
                                 <h4><a href="">Frata Ruggio</a></h4>
                             </div>
