fix navbar playlist

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="flex-column">
                     <!-- Radio Buttons -->
-                    <div class="radios mtop20">
+                    <div class="radios">
                         <div>
                             <input type="radio" id="home" name="section" checked>
                             <label for="home"><img src="img/home.svg" alt="home"><span>Home</span></label>
@@ -48,19 +48,18 @@
                     <!-- Playlist -->
                     <div class="playlist pad20">
                         <h4>Playlist</h4>
-                        <div class="flex-column">
-                            <ul>
-                                <li><a href=""><i class="fa-solid fa-plus"></i><span>Crea Playlist</span></a></li>
-                                <li><a href=""><span>Nome Playlist</span></li></a>
-                                <li><a href=""><span>Nome Playlist</span></li></a>
-                                <li><a href=""><span>Nome Playlist</span></li></a>
-                                <li><a href=""><span>Nome Playlist</span></li></a>
-                                <li><a href=""><span>Nome Playlist</span></li></a>
-                                <li><a href=""><span>Nome Playlist</span></li></a>
-                                <li><a href=""><span>Nome Playlist</span></li></a>
-                                <li><a href=""><span>Nome Playlist</span></li></a>
-                            </ul>
-                        </div>
+                        <a href=""><i class="fa-solid fa-plus"></i><span>Crea Playlist</span></a>
+                        <ul>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
+                            <li><a href=""><span>Nome Playlist</span></li></a>
+                        </ul>
                     </div>
                     <!-- /Playlist -->
                     <!-- User -->
