fix main nav-radios

--- a/index.html
+++ b/index.html
@@ -78,51 +78,51 @@
             <!-- Main -->
             <main>
                 <!-- Radio Navigators -->
-                <div class="container-radios pad20">
-                    <div class="flex-wrap justify-center">
-                        <div>
+                <div id="nav-radios" class="container-radios pad20">
+                    <ul class="flex-wrap justify-center">
+                        <li>
                             <input type="radio" id="evidenza" name="music" checked>
                             <label for="evidenza">
                                 in evidenza
                                 <div class="green-check"></div>
                             </label>
-                        </div>
-                        <div>
+                        </li>
+                        <li>
                             <input type="radio" id="podcast" name="music">
                             <label for="podcast">
                                 podcast
                                 <div class="green-check"></div>
                             </label>
-                        </div>
-                        <div>
+                        </li>
+                        <li>
                             <input type="radio" id="classifiche" name="music">
                             <label for="classifiche">
                                 classifiche
                                 <div class="green-check"></div>
                             </label>
-                        </div>
-                        <div>
+                        </li>
+                        <li>
                             <input type="radio" id="generi" name="music">
                             <label for="generi">
                                 generi e mood
                                 <div class="green-check"></div>
                             </label>
-                        </div>
-                        <div>
+                        </li>
+                        <li>
                             <input type="radio" id="nuoveuscite" name="music">
                             <label for="nuoveuscite">
                                 nuove uscite
                                 <div class="green-check"></div>
                             </label>
-                        </div>
-                        <div>
+                        </li>
+                        <li>
                             <input type="radio" id="scopri" name="music">
                             <label for="scopri">
                                 scopri
                                 <div class="green-check"></div>
                             </label>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
                 <!-- /Radio Navigators -->
                 <!-- Recent -->
